# cloak-minster-ballot

./: .gitignore  README.md  input.json  next.config.ts  notes.md  package-lock.json  package.json  tsconfig.json
anchor/: .gitignore  Anchor.toml  Cargo.toml
anchor/keys/: signer.json
anchor/programs/zk_voting_system/: Cargo.toml
anchor/programs/zk_voting_system/src/: error.rs  lib.rs  mod.rs  state.rs
anchor/programs/zk_voting_system/src/instructions/: cast_vote.rs  close_registration.rs  conclude_election.rs  init_election.rs  mod.rs  register_voter.rs  update_root.rs  vote.rs
anchor/programs/zk_voting_system/src/zk/: mod.rs  register_voter_vk.rs  verifier.rs  vote_verifying_key.rs  vote_vk.rs
anchor/tests/: instruction_calls.ts  utils.ts  zk_voting_system.test.ts
anchor/tests/proof_utils/: Cargo.toml
circom/: Makefile  identity_nullifier.circom  vote.circom
circom/identity_nullifier_cpp/: Makefile
circom/vote/: vote.circom
keys/: signer.json
patches/: electron-fetch+1.9.1.patch  ipfs-utils+8.1.6.patch
public/pkg/: proof_utils_bg.wasm
public/zk/identity_nullifier/: 1_0000.zkey  identity_nullifier.wasm
scripts/: generate_vote_circuit_input.ts  parse_vk_to_rust.js  parse_vk_to_rust.mjs  temp.js  voucher_to_vote_circuit_input_json.mjs  vouchers_to_vote_circuit_inputs.ts
src/app/: layout.tsx
src/components/: app-layout.tsx  app-sidebar.tsx  connect-wallet.tsx  nav-main.tsx  team-switcher.tsx
src/lib/: constants.ts  ipfs.ts  utils.ts
src/types/: global.d.ts  index.ts  zk-libs.d.ts
test-ledger/: faucet-keypair.json
(+37 files in other folders)
