[package]
name = "zk_voting_system"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zk_voting_system"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = {version ="0.31.1", features = ["event-cpi"]}
groth16-solana = "0.1.0"
proc-macro2 = { version = "1.0.95"}
